[gd_scene load_steps=7 format=3 uid="uid://dbx5m3g0x5rqe"]

[ext_resource type="Script" path="res://AudioManager.gd" id="1_vgnro"]
[ext_resource type="AudioStream" uid="uid://bbl2modj0rqn8" path="res://insert.mp3" id="2_3vrd1"]
[ext_resource type="AudioStream" uid="uid://bxfw5gqheltk8" path="res://popping.mp3" id="3_5jdlg"]
[ext_resource type="AudioStream" uid="uid://x1lcasidcc2o" path="res://merge.mp3" id="4_c4oyu"]
[ext_resource type="AudioStream" uid="uid://c2trvu2nqabum" path="res://music.mp3" id="5_mlrdj"]
[ext_resource type="AudioStream" uid="uid://cx41v31pulmqi" path="res://shoot.mp3" id="6_ilotl"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_vgnro")

[node name="InsertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3vrd1")

[node name="PoppingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5jdlg")

[node name="MergeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_c4oyu")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mlrdj")
volume_db = -2.811

[node name="ShootingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ilotl")
